--- a/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/clash_dvalue.htm
+++ b/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/clash_dvalue.htm
@@ -1,8 +1,13 @@
 <%+cbi/valueheader%>
-<span style="color: green">
+<div style="text-align: center; margin:0 auto;">
+<div style="transform:translateY(100%);">
+<%:NB: Rename your config file to config.yml before upload. file will save to /etc/openclash%>
+</div>
+<div style="color: green; transform:translateY(200%);">
 <%
 	local val = self:cfgvalue(section) or self.default or ""
 	write(pcdata(val))
 %>
-</span>
+</div>
+</div>
 <%+cbi/valuefooter%>
