--- a/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/clash_upload.htm
+++ b/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/clash_upload.htm
@@ -1,5 +1,7 @@
 <%+cbi/valueheader%>
-	<label class="cbi-value" style="display:inline-block;" for="ulfile"></label>
-	<input class="cbi-input-file" style="width: 400px" type="file" id="ulfile" name="ulfile" />
+<div style="text-align: center; margin:0 auto;">
+	<label class="cbi-value" style="display:inline-block; width: 130px" for="ulfile"><%:Upload Clash Configuration%></label>
+  <input class="cbi-input-file" style="width: 400px" type="file" id="ulfile" name="ulfile" />
 	<input type="submit" class="cbi-button cbi-input-reload" name="upload" value="<%:Upload%>" />
+</div>	
 <%+cbi/valuefooter%>
