For clash dev: use yaml default

--- a/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/clash_dvalue.htm
+++ b/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/clash_dvalue.htm
@@ -1,7 +1,7 @@
 <%+cbi/valueheader%>
 <div style="text-align: center; margin:0 auto;">
 <div style="transform:translateY(100%);">
-<%:NB: Rename your config file to config.yml or config.yaml before upload. file will save to /etc/openclash%>
+<%:NB: Rename your config file to config.yaml or config.yml before upload. file will save to /etc/openclash%>
 </div>
 <div style="color: green; transform:translateY(200%);">
 <%
