--- a/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/status.htm
+++ b/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/status.htm
@@ -100,7 +100,7 @@ function go_update()
           var rdmdl=Math.floor(Math.random()*9)+1;
           if(rdmdl==1)
           {
-             startlog.innerHTML = '<b><font><%: Tip: 您可以在配置文件页面直接修改配置文件 %></font></b>';
+             startlog.innerHTML = '<b><font><%: Tip: 您可以在配置文件页面直接修改配置文件（适用于没被接管的内容） %></font></b>';
           }
           if(rdmdl==2)
           {
@@ -112,7 +112,7 @@ function go_update()
           }
           if(rdmdl==4)
           {
-             startlog.innerHTML = '<b><font><%: Tip: 某些网站链接出现异常? 试试切换模式或者使用其他第三方规则 %></font></b>';
+             startlog.innerHTML = '<b><font><%: Tip: 某些网站链接出现异常? 试试切换模式或者使用第三方规则 %></font></b>';
           }
           if(rdmdl==5)
           {
@@ -120,7 +120,7 @@ function go_update()
           }
           if(rdmdl==6)
           {
-             startlog.innerHTML = '<b><font><%: Tip: 使用 TLS 或者 TCP 方式查询DNS可以获得更好的抗污染效果 %></font></b>';
+             startlog.innerHTML = '<b><font><%: Tip: 使用 TLS & TCP & HTTPS 方式查询DNS可以获得更好的抗污染效果 %></font></b>';
           }
           if(rdmdl==7)
           {
@@ -128,7 +128,7 @@ function go_update()
           }
           if(rdmdl==8)
           {
-             startlog.innerHTML = '<b><font><%: Tip: 使用自定义DNS上游服务器时Nameserver组必须设置至少一个服务器 %></font></b>';
+             startlog.innerHTML = '<b><font><%: Tip: 使用自定义DNS上游服务器时NameServer组必须设置至少一个服务器 %></font></b>';
           }
           if(rdmdl==9)
           {
