--- a/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/state.htm
+++ b/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/state.htm
@@ -2,8 +2,8 @@
 <fieldset class="cbi-section">
 	<table>
 	  <tr><td width="100%" colspan="4" align="center"><b> 一些必要的状态显示，运行前请确保各项目显示正常，需要更新请到更新设置页面操作 </b></td></tr>
-		<tr><td width="25%"> 配置文件检查【服务器(策略)组、规则、DNS设置】 </td><td width="25%" align="left" id="_config_check"><%:Collecting data...%></td><td width="25%"> 配置文件更新日期 </td><td width="25%"v align="left" id="_config"><%:Collecting data...%></td></tr>
-		<tr><td width="25%"> GEOIP(By MaxMind) 数据库日期 </td><td width="25%" align="left" id="_ipdb"><%:Collecting data...%></td><td width="25%"> lhie1 规则更新日期 </td><td width="25%" align="left" id="_lhie1"><%:Collecting data...%></td></tr>
+		<tr><td width="25%" align="left"> 启动参数检查（配置文件） </td><td width="25%" align="left" id="_config_check"><%:Collecting data...%></td><td width="25%"> 配置文件更新日期 </td><td width="25%" align="left" id="_config"><%:Collecting data...%></td></tr>
+		<tr><td width="25%"> GEOIP（By MaxMind）数据库日期 </td><td width="25%" align="left" id="_ipdb"><%:Collecting data...%></td><td width="25%"> lhie1 规则更新日期 </td><td width="25%" align="left" id="_lhie1"><%:Collecting data...%></td></tr>
 		<tr><td width="25%"> ConnersHua 规则更新日期 </td><td width="25%" align="left" id="_ConnersHua"><%:Collecting data...%></td><td width="25%"> ConnersHua 回国规则更新日期 </td><td width="25%" align="left" id="_ConnersHua_return"><%:Collecting data...%></td></tr>
 	</table>
 </fieldset>
@@ -17,8 +17,24 @@
 	var config_check = document.getElementById('_config_check');
 	XHR.poll(2, '<%=luci.dispatcher.build_url("admin", "services", "openclash", "state")%>', null, function(x, status) {
 		if ( x && x.status == 200 ) {
-			config_check.innerHTML = status.config_check ? '<b><font color=green><%:Config Normal%></font></b>' : '<b><font color=red><%:Config Abnormal%></font></b>';
-			config.innerHTML = status.config ? "<b><font color=green>"+status.config+"</font></b>" : "<b><font color=red>"+"<%:File No Update%>"+"</font></b>";
+		  if (status.config_check == "") {
+		     config_check.innerHTML = '<b><font color=green><%:Config Normal%></font></b>';
+		  }
+		  else if (status.config_check == "1") {
+		     config_check.innerHTML = '<b><font color=red><%:未找到配置文件%></font></b>';
+		  }
+		  else {
+		     config_check.innerHTML = '<b><font color=red>'+status.config_check+'<%: - 参数异常%></font></b>';
+		  }
+			if (status.config == "1") {
+			   config.innerHTML = "<b><font color=green><%:未找到配置文件%></font></b>";
+			}
+			else if (status.config == "0") {
+			   config.innerHTML = "<b><font color=green><%:原始配置文件%></font></b>";
+			}
+			else {
+			   config.innerHTML = "<b><font color=green>"+status.config+"</font></b>";
+			}
 			ipdb.innerHTML = status.ipdb ? "<b><font color=green>"+status.ipdb+"</font></b>" : "<b><font color=red>"+"<%:File Not Exist%>"+"</font></b>";
 			lhie1.innerHTML = status.lhie1 ? "<b><font color=green>"+status.lhie1+"</font></b>" : "<b><font color=red>"+"<%:File Not Exist%>"+"</font></b>";
 			ConnersHua.innerHTML = status.ConnersHua ? "<b><font color=green>"+status.ConnersHua+"</font></b>" : "<b><font color=red>"+"<%:File Not Exist%>"+"</font></b>";
