--- a/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/state.htm
+++ b/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/state.htm
@@ -15,7 +15,33 @@
 	var ConnersHua = document.getElementById('_ConnersHua');
 	var ConnersHua_return = document.getElementById('_ConnersHua_return');
 	var config_check = document.getElementById('_config_check');
-	XHR.poll(2, '<%=luci.dispatcher.build_url("admin", "services", "openclash", "state")%>', null, function(x, status) {
+	XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "state")%>', null, function(x, status) {
+		if ( x && x.status == 200 ) {
+		  if (status.config_check == "") {
+		     config_check.innerHTML = '<b><font color=green><%:Config Normal%></font></b>';
+		  }
+		  else if (status.config_check == "1") {
+		     config_check.innerHTML = '<b><font color=red><%:未找到配置文件%></font></b>';
+		  }
+		  else {
+		     config_check.innerHTML = '<b><font color=red>'+status.config_check+'<%: - 参数异常%></font></b>';
+		  }
+			if (status.config == "1") {
+			   config.innerHTML = "<b><font color=green><%:未找到配置文件%></font></b>";
+			}
+			else if (status.config == "0") {
+			   config.innerHTML = "<b><font color=green><%:原始配置文件%></font></b>";
+			}
+			else {
+			   config.innerHTML = "<b><font color=green>"+status.config+"</font></b>";
+			}
+			ipdb.innerHTML = status.ipdb ? "<b><font color=green>"+status.ipdb+"</font></b>" : "<b><font color=red>"+"<%:File Not Exist%>"+"</font></b>";
+			lhie1.innerHTML = status.lhie1 ? "<b><font color=green>"+status.lhie1+"</font></b>" : "<b><font color=red>"+"<%:File Not Exist%>"+"</font></b>";
+			ConnersHua.innerHTML = status.ConnersHua ? "<b><font color=green>"+status.ConnersHua+"</font></b>" : "<b><font color=red>"+"<%:File Not Exist%>"+"</font></b>";
+			ConnersHua_return.innerHTML = status.ConnersHua_return ? "<b><font color=green>"+status.ConnersHua_return+"</font></b>" : "<b><font color=red>"+"<%:File Not Exist%>"+"</font></b>";
+		}
+	});
+	XHR.poll(10, '<%=luci.dispatcher.build_url("admin", "services", "openclash", "state")%>', null, function(x, status) {
 		if ( x && x.status == 200 ) {
 		  if (status.config_check == "") {
 		     config_check.innerHTML = '<b><font color=green><%:Config Normal%></font></b>';
