--- a/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/status.htm
+++ b/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/status.htm
@@ -21,7 +21,34 @@
 	var dase = document.getElementById('_dase');
 	var dapo = document.getElementById('_dapo');
 	var clashversion = document.getElementById('_clashversion');
-	XHR.poll(3, '<%=luci.dispatcher.build_url("admin", "services", "openclash", "status")%>', null, function(x, status) {
+	XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "status")%>', null, function(x, status) {
+		if ( x && x.status == 200 ) {
+			clash.innerHTML = status.clash ? '<b><font color=green><%:RUNNING%></font></b>' : '<b><font color=red><%:NOT RUNNING%></font></b>';
+			if ( status.mode == "fake-ip\n" )
+      {
+			   mode.innerHTML = status.clash ? "<b><font color=green><%:( 接管 ) fake-ip 模式%></font></b>" : '<b><font color=red><%:NOT RUNNING%></font></b>';
+			}
+			else if ( status.mode == "redir-host\n" )
+			{
+			   mode.innerHTML = status.clash ? "<b><font color=green><%:( 接管 ) redir-host 模式%></font></b>" : '<b><font color=red><%:NOT RUNNING%></font></b>';
+			}
+			else if ( status.cmode != "" )
+			{
+			   mode.innerHTML = status.clash ? "<b><font color=green><%:( 配置文件 ) %>"+status.cmode+"<%: 模式%></font></b>" : '<b><font color=red><%:NOT RUNNING%></font></b>';
+			}
+			else
+			{
+			   mode.innerHTML = status.clash ? "<b><font color=red><%:( 配置文件 ) 未设置%></font></b>" : '<b><font color=red><%:NOT RUNNING%></font></b>';
+			}
+			watchdog.innerHTML = status.watchdog ? '<b><font color=green><%:RUNNING%></font> </b>' : '<b><font color=red><%:NOT RUNNING%></font></b>';
+			daip.innerHTML = status.daip ? "<b><font color=green>"+status.daip+"</font></b>" : "<b><font color=red>"+"<%:Not Set%>"+"</font></b>";
+			dase.innerHTML = status.dase ? "<b><font color=green>"+status.dase+"</font></b>" : "<b><font color=red>"+"<%:Not Set%>"+"</font></b>";
+			dapo.innerHTML = status.cn_port ? "<b><font color=green>"+status.cn_port+"</font></b>" : "<b><font color=red>"+"<%:Not Set%>"+"</font></b>";
+			web.innerHTML = status.web ? '<input type="button" class="cbi-button cbi-button-reload" value="<%:打开控制面板%>" onclick="return ycad_dashboard(this)"/>' : '<b><font color=red><%:NOT RUNNING%></font></b>';
+			webo.innerHTML = status.web ? '<input type="button" class="cbi-button cbi-button-reload" value="<%:打开控制面板%>" onclick="return net_dashboard(this)"/>' : '<b><font color=red><%:NOT RUNNING%></font></b>';
+		}
+	});
+	XHR.poll(5, '<%=luci.dispatcher.build_url("admin", "services", "openclash", "status")%>', null, function(x, status) {
 		if ( x && x.status == 200 ) {
 			clash.innerHTML = status.clash ? '<b><font color=green><%:RUNNING%></font></b>' : '<b><font color=red><%:NOT RUNNING%></font></b>';
 			if ( status.mode == "fake-ip\n" )
