Enhance functional compatibility for the original OpenWrt version

--- a/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/state.htm
+++ b/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/state.htm
@@ -27,7 +27,7 @@
 		     config_check.innerHTML = '<b><font color=red>'+status.config_check+'<%: - 参数异常%></font></b>';
 		  }
 			if (status.config == "1") {
-			   config.innerHTML = "<b><font color=green><%:未找到配置文件%></font></b>";
+			   config.innerHTML = "<b><font color=red><%:未找到配置文件%></font></b>";
 			}
 			else if (status.config == "0") {
 			   config.innerHTML = "<b><font color=green><%:原始配置文件%></font></b>";
@@ -53,7 +53,7 @@
 		     config_check.innerHTML = '<b><font color=red>'+status.config_check+'<%: - 参数异常%></font></b>';
 		  }
 			if (status.config == "1") {
-			   config.innerHTML = "<b><font color=green><%:未找到配置文件%></font></b>";
+			   config.innerHTML = "<b><font color=red><%:未找到配置文件%></font></b>";
 			}
 			else if (status.config == "0") {
 			   config.innerHTML = "<b><font color=green><%:原始配置文件%></font></b>";
