--- a/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/dvalue.htm
+++ b/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/dvalue.htm
@@ -1,7 +1,7 @@
 <%+cbi/valueheader%>
 <div style="text-align: center; margin:0 auto; display: block; width: 100%; text-overflow: ellipsis;">
 <div>
-<%:NB: Rename your config file to config.yaml or config.yml before upload. file will save to /etc/openclash%>
+<%:Rename your config file to config.yaml before upload what would be save to /etc/openclash%>
 </div>
 <div style="color: green; transform:translateY(80%);">
 <%
