fix: Lag when load page

--- a/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/myip.htm
+++ b/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/myip.htm
@@ -168,7 +168,7 @@
     </td></tr>
 	</table>
 </fieldset>
-    <script src="https://pv.sohu.com/cityjson?ie=utf-8"></script>
+    <script defer="defer" src="https://pv.sohu.com/cityjson?ie=utf-8"></script>
     <script>
         function ip_skk()
        {
