--- a/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/update.htm
+++ b/luci-app-openclash/files/usr/lib/lua/luci/view/openclash/update.htm
@@ -2,16 +2,20 @@
 <fieldset class="cbi-section">
 
 	<table>
-	  <tr><td width="100%" colspan="4" align="center" id="update_tip"><b> 注意：如内核下载失败可前往 https://github.com/vernesong/OpenClash/releases/tag/Clash 手动下载并上传 </b></td></tr>
+	  <tr><td width="100%" colspan="4" align="center" id="update_tip"><b> 注意：如下载失败可手动下载并上传，内核路径为：/etc/openclash </b></td></tr>
+	  <tr><td width="25%"> 已选择编译版本 </td><td width="25%" align="left" id="CORE_VERSION"><%:Collecting data...%></td><td width="25%"> 上次检查更新时间 </td><td width="25%" align="left" id="CHECKTIME"><%:Collecting data...%></td></tr>
 		<tr><td width="25%"> 处理器架构（PROC） </td><td width="25%" align="left" id="CPU_MODEL"><%:Collecting data...%></td><td width="25%"> 处理器架构（OPKG） </td><td width="25%" align="left" id="CPU_MODEL2"><%:Collecting data...%></td></tr>
 		<tr><td width="25%"> 当前内核版本 </td><td width="25%" align="left" id="CORE_CV"><%:Collecting data...%></td><td width="25%"> 当前客户端版本 </td><td width="25%" align="left" id="OP_CV"><%:Collecting data...%></td></tr>
 		<tr><td width="25%"> 最新内核版本 </td><td width="25%" align="left" id="CORE_LV"><%:Collecting data...%></td><td width="25%"> 最新客户端版本 </td><td width="25%" align="left" id="OP_LV"><%:Collecting data...%></td></tr>
 	  <tr><td width="25%"> 更新内核</td><td width="25%" align="left" id="core_up"><%:Collecting data...%></td><td width="25%"> 更新客户端 </td><td width="25%" align="left" id="op_up"><%:Collecting data...%></td></tr>
+	  <tr><td width="25%"> 下载最新版本内核</td><td width="25%" align="left" id="ma_core_up"><%:Collecting data...%></td><td width="25%"> 下载最新版本客户端 </td><td width="25%" align="left" id="ma_op_up"><%:Collecting data...%></td></tr>
 	</table>
 
 </fieldset>
 
 <script type="text/javascript">//<![CDATA[
+  var core_version = document.getElementById('CORE_VERSION');
+  var checktime = document.getElementById('CHECKTIME');
 	var cpu_model = document.getElementById('CPU_MODEL');
 	var cpu_model2 = document.getElementById('CPU_MODEL2');
 	var core_cv = document.getElementById('CORE_CV');
@@ -21,8 +25,22 @@
 	var core_up = document.getElementById('core_up');
 	var op_up = document.getElementById('op_up');
 	var update_tip = document.getElementById('update_tip');
+	var ma_core_up  = document.getElementById('ma_core_up');
+	var ma_op_up  = document.getElementById('ma_op_up');
 	XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "update")%>', null, function(x, status) {
 		if ( x && x.status == 200 ) {
+		  if ( status.corever != "0\n" ) {
+		     core_version.innerHTML = "<b><font color=green>"+status.corever+"</font></b>";
+		  }
+		  else {
+		     core_version.innerHTML = "<b><font color=red><%:未选择编译版本，请到全局设置中配置%></font></b>";
+		  }
+		  if ( status.upchecktime != "" ) {
+		     checktime.innerHTML = "<b><font color=green>"+status.upchecktime+"</font></b>";
+		  }
+		  else {
+		     checktime.innerHTML = "<b><font color=red><%:查询更新失败%></font></b>";
+		  }
 		  cpu_model.innerHTML = status.coremodel ? "<b><font color=green>+status.coremodel+</font></b>" : "<b><font color=red><%:Model Not Found%></font></b>";
       cpu_model2.innerHTML = status.coremodel2 ? "<b><font color=green>"+status.coremodel2+"</font></b>" : "<b><font color=red><%:Model Not Found%></font></b>";
       if ( status.corecv == "0" ) {
@@ -34,29 +52,42 @@
       else {
          core_cv.innerHTML = "<b><font color=red><%:Unknown%></font></b>";
       }
-			if ( status.corelv != "" && status.corelv != status.corecv && status.corecv != "" ) {
+			if ( status.corelv != "" && status.corelv != status.corecv && status.corecv != "" && status.corelv != "\n" ) {
 			   core_lv.innerHTML = "<b><font color=green>"+status.corelv+"<%:<New>%></font></b>";
 			}
-			else if (status.corelv != "") {
+			else if (status.corelv != "" && status.corelv != "\n" ) {
 			   core_lv.innerHTML = "<b><font color=green>"+status.corelv+"</font></b>";
 			}
 			else {
 			   core_lv.innerHTML = "<b><font color=red><%:Unknown%></font></b>";
 			}
 			op_cv.innerHTML = status.opcv ? "<b><font color=green>"+status.opcv+"</font></b>" : "<b><font color=red><%:Unknown%></font></b>";
-			if ( status.oplv != "" && status.oplv != status.opcv && status.opcv != "" ) {
-			   op_lv.innerHTML = "<b><font color=green>"+status.oplv+"<%:<New>%></font></b>";
+			if ( status.oplv != "" && status.oplv != "\n" && "v"+status.oplv != status.opcv && status.opcv != "" ) {
+			   op_lv.innerHTML = "<b><font color=green>v"+status.oplv+"<%:<New>%></font></b>";
 			}
-			else if (status.oplv != "") {
-			   op_lv.innerHTML = "<b><font color=green>"+status.oplv+"</font></b>";
+			else if (status.oplv != "" && status.oplv != "\n") {
+			   op_lv.innerHTML = "<b><font color=green>v"+status.oplv+"</font></b>";
 			}
 			else {
 			   op_lv.innerHTML = "<b><font color=red><%:Unknown%></font></b>";
 			}
 		}
 	});
+  
 	XHR.poll(5, '<%=luci.dispatcher.build_url("admin", "services", "openclash", "update")%>', null, function(x, status) {
 		if ( x && x.status == 200 ) {
+		  if ( status.corever != "0\n" ) {
+		     core_version.innerHTML = "<b><font color=green>"+status.corever+"</font></b>";
+		  }
+		  else {
+		     core_version.innerHTML = "<b><font color=red><%:未选择编译版本，请到全局设置中配置%></font></b>";
+		  }
+		  if ( status.upchecktime != "" ) {
+		     checktime.innerHTML = "<b><font color=green>"+status.upchecktime+"</font></b>";
+		  }
+		  else {
+		     checktime.innerHTML = "<b><font color=red><%:查询更新失败%></font></b>";
+		  }
 		  cpu_model.innerHTML = status.coremodel ? "<b><font color=green>+status.coremodel+</font></b>" : "<b><font color=red><%:Model Not Found%></font></b>";
       cpu_model2.innerHTML = status.coremodel2 ? "<b><font color=green>"+status.coremodel2+"</font></b>" : "<b><font color=red><%:Model Not Found%></font></b>";
       if ( status.corecv == "0" ) {
@@ -68,47 +99,93 @@
       else {
          core_cv.innerHTML = "<b><font color=red><%:Unknown%></font></b>";
       }
-			if ( status.corelv != "" && status.corelv != status.corecv && status.corecv != "" ) {
+			if ( status.corelv != "" && status.corelv != status.corecv && status.corecv != "" && status.corelv != "\n" ) {
 			   core_lv.innerHTML = "<b><font color=green>"+status.corelv+"<%:<New>%></font></b>";
 			}
-			else if (status.corelv != "") {
+			else if (status.corelv != "" && status.corelv != "\n" ) {
 			   core_lv.innerHTML = "<b><font color=green>"+status.corelv+"</font></b>";
 			}
 			else {
-			   core_lv.innerHTML = "<b><font color=green><%:Unknown%></font></b>";
+			   core_lv.innerHTML = "<b><font color=red><%:Unknown%></font></b>";
 			}
 			op_cv.innerHTML = status.opcv ? "<b><font color=green>"+status.opcv+"</font></b>" : "<b><font color=red><%:Unknown%></font></b>";
-			if ( status.oplv != "" && status.oplv != status.opcv && status.opcv != "" ) {
-			   op_lv.innerHTML = "<b><font color=green>"+status.oplv+"<%:<New>%></font></b>";
+			if ( status.oplv != "" && status.oplv != "\n" && "v"+status.oplv != status.opcv && status.opcv != "" ) {
+			   op_lv.innerHTML = "<b><font color=green>v"+status.oplv+"<%:<New>%></font></b>";
 			}
-			else if (status.oplv != "") {
-			   op_lv.innerHTML = "<b><font color=green>"+status.oplv+"</font></b>";
+			else if (status.oplv != "" && status.oplv != "\n") {
+			   op_lv.innerHTML = "<b><font color=green>v"+status.oplv+"</font></b>";
 			}
 			else {
-			   op_lv.innerHTML = "<b><font color=green><%:Unknown%></font></b>";
+			   op_lv.innerHTML = "<b><font color=red><%:Unknown%></font></b>";
 			}
 		}
 	});
 	
 	core_up.innerHTML = '<input type="button" class="cbi-button cbi-button-reload" value="<%:检查并更新%>" onclick="return core_update(this)"/>';
 	op_up.innerHTML = '<input type="button" class="cbi-button cbi-button-reload" value="<%:检查并更新%>" onclick="return op_update(this)"/>';
+	ma_core_up.innerHTML = '<input type="button" class="cbi-button cbi-button-reload" value="<%:下载到本地%>" onclick="return ma_core_update(this)"/>';
+	ma_op_up.innerHTML = '<input type="button" class="cbi-button cbi-button-reload" value="<%:下载到本地%>" onclick="return ma_op_update(this)"/>';
 	
 	function core_update(btn)
     {
+        btn.disabled = true;
+        btn.value    = '<%:运行中...%>';
         XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "coreupdate")%>', status.coreup, function(x, status) {
-        btn.disabled = false;
+        if ( x && x.status == 200 ) {
         btn.value    = '<%:检查并更新%>';
-        return false;
+        btn.disabled = false;
+        return false; 
+        }
         });
     }
 	
 	function op_update(btn)
     {
+        btn.disabled = true;
+        btn.value    = '<%:运行中...%>';
         XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "opupdate")%>', status.opup, function(x, status) {
-        btn.disabled = false;
+        if ( x && x.status == 200 ) {
         btn.value    = '<%:检查并更新%>';
+        btn.disabled = false;
         return false;
+        }
         });
+    }
+    
+    function ma_core_update(btn)
+    {
+        btn.value    = '<%:下载到本地%>';
+        btn.disabled = false;
+        XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "update")%>', status.corever, function(x, status) {
+        if ( x && x.status == 200 ) {
+           if ( status.corever != "0\n" ) {
+              url1='https://github.com/vernesong/OpenClash/releases/download/Clash/clash-'+status.corever+'.tar.gz';
+              window.open(url1);
+           }
+           else {
+              alert('未选择编译版本，请到全局设置中配置！')
+           }
+        }
+        });
+        return false; 
+    }
+    
+    function ma_op_update(btn)
+    {
+        btn.value    = '<%:下载到本地%>';
+        btn.disabled = false;
+        XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "update")%>', status.oplv, function(x, status) {
+        if ( x && x.status == 200 ) {
+           if ( status.oplv != "" && status.oplv != "\n" ) {
+              url2='https://github.com/vernesong/OpenClash/releases/download/v'+status.oplv+'/luci-app-openclash_'+status.oplv+'_all.ipk';
+              window.open(url2);
+           }
+           else {
+              alert('最新版本获取失败，请稍后再试！')
+           }
+        }
+        });
+        return false; 
     }
     
     XHR.poll(7, '<%=luci.dispatcher.build_url("admin", "services", "openclash", "startlog")%>', status.startlog, function(x, status) {
@@ -117,7 +194,7 @@
 		      var rdmdl=Math.floor(Math.random()*2)+1;
 		      if(rdmdl==1)
           {
-             update_tip.innerHTML = '<b><font><%: 注意：如内核下载失败可前往 https://github.com/vernesong/OpenClash/releases/tag/Clash 手动下载并上传 %></font></b>';
+             update_tip.innerHTML = '<b><font><%: 注意：如下载失败可手动下载并上传，内核路径为：/etc/openclash %></font></b>';
           }
           if(rdmdl==2)
           {
@@ -126,6 +203,7 @@
        }
     }
 	});
+	
 	XHR.poll(2, '<%=luci.dispatcher.build_url("admin", "services", "openclash", "startlog")%>', status.startlog, function(x, status) {
 	  if ( x && x.status == 200 ) {
 		   if ( status.startlog != "\n" && status.startlog != "" ) {
